Fixed dark mode issue

--- a/src/app.css
+++ b/src/app.css
@@ -1,11 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-* {
-	@apply transition-all;
+body {
+	@apply font-[Outfit] bg-gray-100 dark:bg-gray-900 text-black dark:text-white;
 }
 
-body {
-	@apply bg-gray-50 dark:bg-gray-950;
+* {
+	@apply transition;
 }
